--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeloy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d"
   },
   "dependencies": {
     "react": "^18.3.1",
