--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://codingseru.github.io/ToDoList",
+  "homepage": "https://codingseru.github.io/ToDoList/",
   "name": "to-do-list",
   "private": true,
   "version": "0.0.0",
