--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "homepage": "https://codingseru.github.io/ToDoList/",
   "name": "to-do-list",
-  "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -9,8 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "vite build && vite gh-pages"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -28,6 +26,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "gh-pages": "^6.2.0",
     "globals": "^15.11.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vite-plugin-gh-pages": "^1.0.0"
   }
 }
